[package]
name = "integrate-klend-2"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
borsh = "0.10.3"
bytemuck = "1.17.0"
futures-util = "0.3"
solana-program = "2.0.3"
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"
spl-associated-token-account = "5.0.1"
spl-token-2022 = "5.0.2"
spl-token = "6.0.0"
bincode = "^1.3.3"
klend = "0.1.0"
fixed = "1.23.1"